2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	res/layout/item_list_event_layout.xml,
	res/layout/list_view_layout.xml, res/drawable/round_event_item.xml,
	res/drawable/round_event_item_blue.xml,
	res/drawable/round_event_item_green.xml,
	res/drawable/round_event_item_grey.xml,
	res/drawable/round_event_item_red.xml,
	res/drawable/round_event_item_yellow.xml: changes in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/About.java,
	res/layout/list_view_layout.xml, res/layout/main.xml,
	res/layout/info.xml, res/drawable/btn_dropdown_pressed.9.png,
	res/drawable/combobox_pressed.9.png, res/drawable/btn_dropdown.xml,
	res/drawable-ldpi/save.png, res/drawable-ldpi/delete.png: changes
	in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/About.java,
	res/values/styles.xml, res/layout/info.xml,
	res/drawable/btn_dropdown.xml,
	res/drawable/btn_dropdown_normal.9.png,
	res/drawable/round_dialog.xml, res/drawable/combobox_normal.9.png,
	AndroidManifest.xml: changes in the themes.

2013-11-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/Main.java,
	src/pandroid_event_viewer/pandorafms/Options.java,
	src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
	res/drawable-ldpi/save.png, res/drawable-ldpi/icon_filter.png,
	res/drawable-ldpi/icon_refresh.png, res/layout/main.xml,
	res/layout/options.xml, res/drawable/btn_dropdown_pressed.9.png,
	res/drawable/btn_dropdown.xml,
	res/drawable/btn_dropdown_normal.9.png, res/values-ja/arrays.xml,
	res/values/styles.xml, res/values/arrays.xml,
	res/menu/options_menu_list_events.xml, res/values-es/arrays.xml:
	changes in the themes.

2013-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,