@@ -80,7 +80,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="gone" >
+        android:visibility="gone"
+        android:background="#242424">
 
         <ProgressBar
             style="?android:attr/progressBarStyleSmall"
